--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,7 +35,28 @@ android {
 dependencies {
     implementation AndroidXDependencies.constraintlayout
 
-    testImplementation TestDependencies.jUnit
-    androidTestImplementation TestDependencies.androidx_test_ext_jUnit
-    androidTestImplementation TestDependencies.espresso_core
+    implementation(JetpackDependencies.viewmodel)
+    implementation(JetpackDependencies.livedata)
+    implementation(JetpackDependencies.viewmodel_saved_state)
+    kapt(JetpackDependencies.lifecycle_compiler)
+    implementation(JetpackDependencies.lifecycle_compiler_java_8)
+    implementation(JetpackDependencies.navigaiton_fragment)
+    implementation(JetpackDependencies.navigaiton_ui)
+
+    implementation(GlideDependencies.glide)
+    annotationProcessor(GlideDependencies.glide_compiler)
+
+    testImplementation(TestDependencies.jUnit)
+    testImplementation(TestDependencies.androidx_core_testing)
+    testImplementation(TestDependencies.androidx_truth)
+    testImplementation(TestDependencies.google_truth)
+    testImplementation(TestDependencies.coroutines_test)
+
+    androidTestImplementation(TestDependencies.androidx_test_ext_jUnit)
+    androidTestImplementation(TestDependencies.espresso_core)
+    androidTestImplementation(TestDependencies.android_test_runner)
+    androidTestImplementation(TestDependencies.hilt_tesiting)
+    androidTestImplementation(TestDependencies.androidx_truth)
+    androidTestImplementation(TestDependencies.google_truth)
+    androidTestImplementation(TestDependencies.navigation_testing)
 }
