--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath GradleDependencies.build_gradle
+        classpath GradleDependencies.kotlin_gradle_plugin
     }
 }
 
