--- a/core/build.gradle
+++ b/core/build.gradle
@@ -33,10 +33,25 @@ android {
 
 dependencies {
     api(KotlinDependencies.kotlin_stdlib)
+    api(KotlinDependencies.coroutines_core)
+    api(KotlinDependencies.coroutines_android)
+
     api(AndroidXDependencies.core_ktx)
     api(AndroidXDependencies.appcompat)
     api(AndroidXDependencies.material)
+
+    api(DataDependencies.retrofit)
+    api(DataDependencies.moshi)
+    api(DataDependencies.moshi_converter)
+
     testImplementation(TestDependencies.jUnit)
+    testImplementation(TestDependencies.coroutines_test)
+    testImplementation(TestDependencies.androidx_core_testing)
+    testImplementation(TestDependencies.androidx_truth)
+    testImplementation(TestDependencies.google_truth)
+
     androidTestImplementation(TestDependencies.androidx_test_ext_jUnit)
     androidTestImplementation(TestDependencies.espresso_core)
+    androidTestImplementation(TestDependencies.androidx_truth)
+    androidTestImplementation(TestDependencies.google_truth)
 }
