--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
     repositories {
         google()
         mavenCentral()
@@ -8,6 +6,7 @@ buildscript {
     dependencies {
         classpath GradleDependencies.build_gradle
         classpath GradleDependencies.kotlin_gradle_plugin
+        classpath GradleDependencies.hilt_android_gradle_plugin
     }
 }
 
@@ -15,7 +14,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter()
     }
 }
 
