PIX-1 Add ktlint

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,3 +64,5 @@ dependencies {
     androidTestImplementation(TestDependencies.navigation_testing)
     kaptAndroidTest(JetpackDependencies.hilt_android_compiler)
 }
+
+apply from: "../ktlint.gradle"
