PIX-2 Add data, interactor and repository layers

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 }
 
 dependencies {
+    implementation(project(":core"))
+
     implementation AndroidXDependencies.constraintlayout
 
     implementation(JetpackDependencies.hilt_android)
