PIX-2 Add pagination with paging library to search results

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     androidTestImplementation(TestDependencies.espresso_core)
     androidTestImplementation(TestDependencies.androidx_truth)
     androidTestImplementation(TestDependencies.google_truth)
+
+    def paging_version = "3.0.0"
+    api("androidx.paging:paging-runtime-ktx:$paging_version")
 }
