--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         classpath GradleDependencies.build_gradle
         classpath GradleDependencies.kotlin_gradle_plugin
         classpath GradleDependencies.hilt_android_gradle_plugin
+        classpath GradleDependencies.navigaiton_safe_args
     }
 }
 
